# metroflow

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: VALIDATION.md
examples/: comparison.json  experiment.json  generate_examples.py
examples/gtfs_sample/: README.md  agency.txt  calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
metroflow/: __init__.py  __main__.py  animate.py  cli.py  config.py  demand.py  errors.py  events.py  experiment.py  gtfs.py  line.py  metrics.py  plots.py  report.py  signalling.py  simulation.py  train.py  validation.py
metroflow/controllers/: __init__.py  base.py  baseline.py  optimizer.py  predictive.py  reactive.py
scenarios/: default.yaml  hongkong_tramway.yaml  intercites_paris_tours.yaml  lille_line_1.yaml  lille_line_2.yaml  lyon_line_a.yaml  lyon_line_d.yaml  paris_line1.yaml  paris_line_14.yaml  rennes_line_a.yaml  rennes_line_b.yaml  rer_a.yaml  rer_b.yaml  rush_incident.yaml  ter_marseille_hyeres.yaml  toulouse_line_a.yaml  toulouse_line_b.yaml
scripts/: controller_grid.py  fetch_gtfs.py
tests/: conftest.py  test_animate.py  test_cli.py  test_controllers.py  test_demand.py  test_demand_gtfs_edge.py  test_experiment.py  test_gtfs.py  test_line.py  test_metrics.py  test_optimizer.py  test_plots.py  test_report_cli.py  test_robustness.py  test_signalling.py  test_simulation.py  test_validation.py
